force-app/main/default/objects/Registration_Code_Verification_Request__c/Registration_Code_Verification_Request__c.object-meta.xml
<CustomObject>
    <label>Registration Code Verification Request</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Registration Code Verification Request N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Code Verification Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>