force-app/main/default/objects/Registration_Code_Verification_Request__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>TextArea</type>
</CustomField>