force-app/main/default/objects/Registration_Code_Verification_Request__c/fields/isDone__c.field-meta.xml
<CustomField>
    <fullName>isDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDone</label>
    <type>Checkbox</type>
</CustomField>