force-app/main/default/objects/Registration_Code_Verification_Request__c/fields/Lang_Country__c.field-meta.xml
<CustomField>
    <fullName>Lang_Country__c</fullName>
    <label>Lang Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>